force-app/main/default/objects/AI_Provider_Config__mdt/AI_Provider_Config__mdt.object-meta.xml
<CustomObject>
    <label>AI Provider Config</label>
    <pluralLabel>AI Provider Configs</pluralLabel>
</CustomObject>