force-app/main/default/objects/AI_Provider_Config__mdt/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description
  >Whether this provider can be routed to. Only Disabled ships active by default.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>