force-app/main/default/objects/AI_Provider_Config__mdt/fields/Api_Version__c.field-meta.xml
<CustomField>
    <fullName>Api_Version__c</fullName>
    <description
  >Provider API version, e.g. required for Azure OpenAI callouts.</description>
    <label>Api Version</label>
    <length>50</length>
    <type>Text</type>
</CustomField>