force-app/main/default/objects/AI_Provider_Config__mdt/fields/Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Base_URL__c</fullName>
    <description
  >Path appended to the Named Credential callout endpoint.</description>
    <label>Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>