force-app/main/default/objects/AI_Provider_Config__mdt/fields/Max_Tokens__c.field-meta.xml
<CustomField>
    <fullName>Max_Tokens__c</fullName>
    <description
  >Maximum response tokens requested from the provider.</description>
    <label>Max Tokens</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>