force-app/main/default/objects/AI_Provider_Config__mdt/fields/Model_Name__c.field-meta.xml
<CustomField>
    <fullName>Model_Name__c</fullName>
    <description>Model identifier to request from the provider.</description>
    <label>Model Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>