force-app/main/default/objects/AI_Provider_Config__mdt/fields/Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>Named_Credential__c</fullName>
    <description
  >Named Credential API name used for the callout endpoint and authentication.</description>
    <label>Named Credential</label>
    <length>100</length>
    <type>Text</type>
</CustomField>