force-app/main/default/objects/AI_Provider_Config__mdt/fields/Provider_Type__c.field-meta.xml
<CustomField>
    <fullName>Provider_Type__c</fullName>
    <description>Implementation type this record routes to.</description>
    <label>Provider Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Disabled</fullName>
            </value>
            <value>
                <fullName>OpenAI</fullName>
            </value>
            <value>
                <fullName>AzureOpenAI</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>