force-app/main/default/objects/AI_Provider_Config__mdt/fields/Timeout_Seconds__c.field-meta.xml
<CustomField>
    <fullName>Timeout_Seconds__c</fullName>
    <description>Callout timeout in seconds.</description>
    <label>Timeout Seconds</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>